[gd_scene load_steps=2 format=2]

[ext_resource path="res://CreateUser.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LabelName" type="Label" parent="."]
margin_left = 216.0
margin_top = 335.0
margin_right = 288.0
margin_bottom = 349.0
text = "User Name"

[node name="LabelPassword" type="Label" parent="."]
margin_left = 220.0
margin_top = 381.0
margin_right = 260.0
margin_bottom = 395.0
text = "Password"

[node name="LineEditName" type="LineEdit" parent="."]
margin_left = 320.0
margin_top = 328.0
margin_right = 449.0
margin_bottom = 352.0

[node name="LineEdit2Password" type="LineEdit" parent="."]
margin_left = 317.0
margin_top = 376.0
margin_right = 449.0
margin_bottom = 400.0

[node name="ButtonCreateNewUser" type="Button" parent="."]
margin_left = 319.0
margin_top = 438.0
margin_right = 443.0
margin_bottom = 476.0
text = "Create new user"

[node name="LabelID" type="Label" parent="."]
margin_left = 225.0
margin_top = 509.0
margin_right = 387.0
margin_bottom = 550.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Remeber ID for login"

[node name="show_id" type="TextEdit" parent="."]
margin_left = 216.0
margin_top = 62.0
margin_right = 633.0
margin_bottom = 289.0

[node name="timer" type="Timer" parent="."]

[node name="ShowData" type="Button" parent="."]
margin_left = 473.0
margin_top = 436.0
margin_right = 618.0
margin_bottom = 474.0
text = "User Data"

[connection signal="pressed" from="ButtonCreateNewUser" to="." method="_on_ButtonCreateNewUser_pressed"]
[connection signal="pressed" from="ShowData" to="." method="_on_ShowData_pressed"]
